service-mesh/istio/weather-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather
      version: v1
  template:
    metadata:
      labels:
        app: weather
        version: v1
    spec:
      containers:
      - name: weather
        image: brainupgrade/weather-py:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: weather-service
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: weather
