service-mesh/istio/istio-virtual-service-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weather
spec:
  hosts:
  - "*"
  gateways:
  - weather-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: weather-service
        port:
          number: 80
        subset: v1
      weight: 90
    - destination:
        host: weather-service
        port:
          number: 80
        subset: v2
      weight: 10
